signup styling. TEMP fix on mobile version.

--- a/gibsonwebsite/public/css/signupdesign.css
+++ b/gibsonwebsite/public/css/signupdesign.css
@@ -1,3 +1,7 @@
+.signup-carousel{
+	overflow: auto;
+}
+
 #progressBar {
 	margin-left: 25%;
 	width: 50%;
@@ -81,17 +85,24 @@ box-shadow: -9px 9px 43px 0px rgba(0,0,0,0.75);
 
 
 .next-button{
-    margin-right: 4.8%;
-    float: right;
+	float:right;
 }
 
 .register-button{
-    margin-right: 10%;
-    float: right;
+    margin-right: 0px;
+    margin-left: auto;
+}
+
+#removebutton{
+	float:right;
+}
+
+#btnsubmit{
+	float: right;
 }
 
 #signup-notifications{
-	margin-left:21%;
+	float: right;
 }
 
 .extend{
